--- a/admin/models/forms/category.xml
+++ b/admin/models/forms/category.xml
@@ -343,7 +343,8 @@
 			<field name="show_editbutton_lists" type="radio" default="" label="FLEXI_SHOW_EDIT_BUTTON_IN_LISTS" description="FLEXI_SHOW_EDIT_BUTTON_IN_LISTS_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
 				<option value="0">FLEXI_HIDE</option>
-				<option value="1">FLEXI_SHOW</option>
+				<option value="1">FLEXI_LINK_TO_FE</option>
+				<option value="2">FLEXI_LINK_TO_BE</option>
 			</field>
 			<field name="show_comments_count" type="radio" default="" label="FLEXI_SHOW_COMMENTS_COUNTER" description="FLEXI_SHOW_COMMENTS_COUNTER_DESC" class="btn-group btn-group-yesno">
 				<option value="">FLEXI_USE_GLOBAL</option>
@@ -600,7 +601,7 @@
 		</fieldset>
 		
 		<fieldset name="cat_item_filtering" addfieldpath="/administrator/components/com_flexicontent/elements">
-		
+			
 			<field name="" type="separator" default="FLEXI_SEARCH_FILTER_FORM" description="" level="level2" hr="false" />
 			<field name="ff_placement" type="multilist" subtype="radio" default="" label="FLEXI_SEARCH_FILTER_FORM_PLACEMENT" description="FLEXI_SEARCH_FILTER_FORM_PLACEMENT_DESC" class="btn-group group-fcsuccess">
 				<option value="">FLEXI_USE_GLOBAL</option>
