--- a/site/assets/css/flexi_shared.css
+++ b/site/assets/css/flexi_shared.css
@@ -1091,9 +1091,9 @@ ul.fcimport_field_value_list li { margin-bottom:0em; }
 	background-color: lightgray;
 	color: white;
 }
-table.img_upload_select {
+/*table.img_upload_select {
   width: 60% !important;
-}
+}*/
 
 
 /* FIELDs: DRAG (sort) handle */
@@ -1668,7 +1668,7 @@ ul.thumbnails.image_picker_selector li div.thumbnail p {
 #flexicontent .fcfield_selectmulval,
 #flexicontent .fcfield_textval {
 	background-clip: padding-box;
-	background-color: #FFFFFF !important;
+	/*background-color: #FFFFFF;*/
 	color: #444 !important;
 	border: 1px solid #AAAAAA;
 	border-radius: 4px;
