^ More helpful UI for template file editting, adding explanations for each file, and per some file code insertion buttons

--- a/admin/assets/css/flexicontentbackend.css
+++ b/admin/assets/css/flexicontentbackend.css
@@ -671,3 +671,9 @@ legend .fc_legend_text {
     position: relative;
     top: 0;
 }
+
+/* Some tooltips customization */
+body .tooltip.in {
+    opacity: 0.90;
+    filter:alpha(opacity=90);
+}
