Minor fixes, fixed fieldgroup item form inline tips, fixed small preview thumbs in items manager when viewed by chrome, fixed wrong language string for Search view default menu item being called 'tags menu item', fixed reporting wrong version number during installation when xmap plugin is installed

--- a/site/assets/css/flexi_containers.css
+++ b/site/assets/css/flexi_containers.css
@@ -125,10 +125,7 @@
 	line-height: 140%;
 
 }
-.fc-padded-image {
-	padding:4px 6px 4px 4px;
-	margin:-4px -6px -4px -4px;
-	display:inline-block;
+.fc-tooltip-img {
 }
 
 
