--- a/modules/mod_flexicontent/tmpl/carousel/carousel.css
+++ b/modules/mod_flexicontent/tmpl/carousel/carousel.css
@@ -60,7 +60,7 @@
 	
 	/* can be overriden via user 's CSS */
 	margin: 4px;
-	padding: 4px;
+	padding: 0;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #dfdfdf #9f9f9f #9f9f9f #dfdfdf;
@@ -199,15 +199,17 @@
 /* ITEM BASIC FIELDS STYLES (FOR CUSTOM FIELDS see below, FOR IMAGE AND DATE see more below) */
 /*********************************************************************************************/
 
-.carousel.mod_flexicontent_wrapper .content_standard {}  /* container of basic elements of standard items excluding title & image */
-.carousel.mod_flexicontent_wrapper .content_featured {}  /* container of basic elements of featured items excluding title & image */
+.carousel.mod_flexicontent_wrapper .content_standard {padding: 4px 12px;}  /* container of basic elements of standard items excluding title & image */
+.carousel.mod_flexicontent_wrapper .content_featured {padding: 4px 12px;}  /* container of basic elements of featured items excluding title & image */
 
 
 /* CONTAINER of item title */
 .carousel.mod_flexicontent_wrapper .fcitem_title {
-	padding:1px 4px 1px 4px;  margin: 2px 0px 2px 0px;
+	padding:1px 4px 1px 4px;
+	margin: 2px 0px 2px 0px;
 	/*border: 1px dashed #bbbbbb;*/
-	font-size: 120%;  font-weight:bold;	text-align:left;
+	font-size: 120%;
+	text-align:left;
 }
 .carousel.mod_flexicontent_wrapper .fcitem_title:hover {
 	/*border: 1px dashed black;*/
@@ -269,7 +271,7 @@
 .carousel.mod_flexicontent_wrapper .image_featured,
 .carousel.mod_flexicontent_wrapper .image_standard {
 	float: left;
-	margin: 0 6px 6px 0;
+	margin: 0;
 }
 
 /* item image styling (link, image, etc) */
@@ -426,12 +428,12 @@
 }
 .carousel.mod_flexicontent_wrapper .fc_float_left {
 	float: left !important;
-	margin: 6px 6px 6px 0;
+	margin: 0px 6px 6px 0;
 	display: block;
 }
 .carousel.mod_flexicontent_wrapper .fc_float_right {
 	float: right !important;
-	margin: 6px 0 6px 6px;
+	margin: 0px 0 6px 6px;
 	display: block;
 }
 .carousel.mod_flexicontent_wrapper .fc_floated {}
@@ -439,11 +441,11 @@
 .carousel.mod_flexicontent_wrapper .image_featured.fc_float_left img,
 .carousel.mod_flexicontent_wrapper .image_featured.fc_float_right img,
 .carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
-.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { }
 .carousel.mod_flexicontent_wrapper .image_featured.fc_float_left img,
 .carousel.mod_flexicontent_wrapper .image_featured.fc_float_right img,
 .carousel.mod_flexicontent_wrapper .image_standard.fc_float_left img,
-.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { border-radius: 8px; }
+.carousel.mod_flexicontent_wrapper .image_standard.fc_float_right img { }
 
 .carousel.mod_flexicontent_wrapper .fc_clear { clear: both !important; }
 
@@ -540,7 +542,7 @@
 	width: 100%;
 	text-align: center;
 	clear:both;
-	margin: 6px auto;
+	margin: 12px auto 6px;
 }
 .carousel.mod_flexicontent_wrapper .mod_fc_page_handles {
 	position:relative !important;
@@ -874,14 +876,14 @@
 /* Customize clear box */
 .carousel.mod_flexicontent_wrapper .modclear {
 	height: 0px !important;
-	border-bottom: 1px dashed gray;
-	padding: 0px 0px 12px 0px;
-	margin: 0px 1% 12px 1%;
-	width: 98%;
+	border-bottom: 0px dashed gray;
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;;
+	width: 100%;
 }
 
 .carousel.mod_flexicontent_wrapper .mCSB_horizontal > .mCSB_container {
-	margin-bottom: 24px;
+	margin-bottom: 12px;
 	margin-left: auto;
 	margin-right: auto;
 }
