--- a/admin/models/forms/type.xml
+++ b/admin/models/forms/type.xml
@@ -345,8 +345,9 @@
 			</field>
 			<field name="addcat_title" type="radio" default="1" label="FLEXI_ADDCAT_PAGETTITLE" description="FLEXI_ADDCAT_PAGETTITLE_DESC" class="btn-group btn-group-yesno">
 				<option value="0">FLEXI_NO</option>
-				<option value="1">FLEXI_YES</option>
-			</field>
+                                <option value="1">FLEXI_ON_LEFT</option>
+                                <option value="2">FLEXI_ON_RIGHT</option>
+ 			</field>
 			
 			<field name="" type="separator" default="FLEXI_TYPE_SEO_OTHER" level="level2" />
 			<field name="add_canonical" type="radio" default="" label="FLEXI_ADD_CANONICAL" description="FLEXI_ADD_CANONICAL_DESC" class="btn-group btn-group-yesno">
